# cap-scale

./: .gitignore  Makefile  README.md
constraints/: colorlight_i9.lpf
host/: pyproject.toml
host/cap_inspector/: __main__.py  app.py
host/cap_inspector/comm/: encoder_link.py  protocol.py  serial_link.py
host/cap_inspector/core/: calibration.py  config.py  data_logger.py  units.py
host/cap_inspector/gui/: main_window.py
host/cap_inspector/gui/tabs/: calibration_tab.py  live_position_tab.py  runout_tab.py  settings_tab.py  signal_tab.py  vibration_tab.py
host/tests/: test_config.py  test_protocol.py  test_units.py
pcb/: DESIGN_GUIDE.md  generate_electrodes.py
pcb/amp/: amp.kicad_pro
pcb/reader/: reader.kicad_pro
pcb/scale/: scale.kicad_pro
scripts/: gen_atan2_lut.py  gen_atan_lut.py
src/: adc_capture.v  atan_lut.hex  channel_mux.v  cmd_parser.v  excitation_gen.v  position_calc.v  position_tx.v  spi_peripheral.v  sync_demod.v  top.v
testbench/: atan2_lut.hex  tb_channel_mux.v  tb_cmd_parser.v  tb_excitation_gen.v  tb_position_calc.v  tb_sync_demod.v  tb_top.v
